fix(infra): add @Mapping for bloomConfig→bloom in GalaxyEntityMapper, fix star rating CSS visibility

--- a/sbgb-gui/src/app/galaxy/galaxy-shell/galaxy-shell.component.scss
+++ b/sbgb-gui/src/app/galaxy/galaxy-shell/galaxy-shell.component.scss
@@ -11,13 +11,15 @@
   }
 
   .star-btn {
-    color: rgba(255, 255, 255, 0.4);
+    ::ng-deep mat-icon {
+      color: rgba(255, 255, 255, 0.4);
+    }
 
-    &.active {
+    &.active ::ng-deep mat-icon {
       color: #ffd740;
     }
 
-    &:not([disabled]):hover {
+    &:not([disabled]):hover ::ng-deep mat-icon {
       color: #ffd740;
     }
   }
